datagrid: alignment isse solved.

--- a/src/styles/def/component/datatable-structure.scss
+++ b/src/styles/def/component/datatable-structure.scss
@@ -98,7 +98,7 @@
 
 .datatable-filter-icon1 {
   position: absolute;
-  top: 10px;
+  top: 1px;
   display: block;
   width: 38px;
   height: 38px;
